--- a/00/.vscode/settings.json
+++ b/00/.vscode/settings.json
@@ -57,6 +57,23 @@
 		"text_encoding": "cpp",
 		"cinttypes": "cpp",
 		"typeinfo": "cpp",
-		"variant": "cpp"
+		"variant": "cpp",
+		"xstring": "cpp",
+		"ios": "cpp",
+		"list": "cpp",
+		"locale": "cpp",
+		"xfacet": "cpp",
+		"xhash": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xlocbuf": "cpp",
+		"xlocinfo": "cpp",
+		"xlocmes": "cpp",
+		"xlocmon": "cpp",
+		"xlocnum": "cpp",
+		"xloctime": "cpp",
+		"xmemory": "cpp",
+		"xtr1common": "cpp",
+		"xutility": "cpp"
 	}
 }
